<resources>
    <string name="app_name">AdvancedRandezvous</string>
    <string name="title_activity_event">AdvancedRandezvous</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Main Activity -->
    <string name="create_event">Create Event</string>
    <string name="view_invite">View Invite</string>
    <string name="view_active_event">View Active Event</string>
    <string name="event_history">Event History</string>
    <string name="manage_event">Manage Event</string>
    <string name="friends">Friends</string>

    <!-- Strings related to Create Event Activity -->
    <string name="creat_event_textview">Create Event</string>
    <string name="create_event_title">Title</string>
    <string name="create_event_location">Location</string>
    <string name="create_event_date">Date</string>
    <string name="create_event_time">Time</string>
    <string name="create_event_cancel">Cancel</string>
    <string name="create_event_create">Create</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>




    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Settings Activity -->
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="greek">Ελληνικά</string>
    <string name="save_settings">Save</string>

    <!-- Event Activity-->
    <string name="event_details">Event Details</string>
    <string name="state">State</string>
    <string name="title">Title</string>
    <string name="manage_participants">Manage Participants</string>
    <string name="active_spec">Active</string>
    <string name="completed_spec">Completed</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_in_button">Check In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_account">Account</string>

    <!-- Friend Activity -->
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!-- Toast -->
    <string name="welcome">Welcome to the event</string>
    <string name="passed">The event date has passed</string>
    <string name="early">It is not time for the event yet</string>
    <string name="away">Please get close to the event to check in</string>
    <string name="localtionErr">Cannot establish location. GPS usage permission is denied</string>
    <string name="addTitle">PLEASE ADD TITLE</string>
    <string name="addDate">PLEASE ADD DATE</string>
    <string name="addTime">PLEASE ADD TIME</string>
    <string name="addLocation">PLEASE ADD LOCATION</string>
    <string name="insertMail">PLEASE INSERT EMAIL ADDRESS</string>
    <string name="insertPass">PLEASE INSERT PASSWORD</string>
    <string name="passLength">Password length must be over 6</string>
    <string name="error">Error: "</string>
    <string name="regSuc">Register Success</string>
    <string name="pasChange">Password Changed</string>

    <string name="welcomeUser">Welcome , </string>

</resources>
