<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unipi.mpsp160_02_12.advancedrandezvous.MainActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RadioButton
        android:id="@+id/languageRadio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="38dp"
        android:text="@string/english"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTextView"
        android:layout_marginStart="54dp" />

    <RadioButton
        android:id="@+id/languageRadio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginTop="38dp"
        android:text="@string/greek"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTextView"
        android:layout_marginEnd="56dp" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/language"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="37dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="141dp"
        app:layout_constraintTop_toBottomOf="@+id/languageTextView"
        android:layout_marginStart="42dp" />


</android.support.constraint.ConstraintLayout>